--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A backend for Parolify.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js"
   },
   "author": "Younes Rahmouni",
   "license": "UNLICENSED",
